Move UnixFileSystem to lib.unix, WindowsFileSystem to lib.windows
--
PiperOrigin-RevId: 148749485
MOS_MIGRATED_REVID=148749485